# bash-llvm

./: CMakeLists.txt
src/: CMakeLists.txt  ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  lexer.inc  main.cpp  mathop.inc  statementops.inc
std/: main.cpp
